# rules_tf

./: README.md
.github/workflows/: ci.yaml
examples/gitops/: BUILD.bazel  MODULE.bazel  README.md  main.tf  mock_ci.sh
tests/bcr/: MODULE.bazel
tests/bcr/tf/modules/mod-a/: BUILD.bazel
tests/bcr/tf/root-modules/root-mod-a/: BUILD.bazel  terraform.tfvars
tf/: def.bzl  extensions.bzl
tf/rules/: tf-config.bzl  tf-deployment.bzl  tf-plan-test.bzl  tf-runner.bzl
tf/toolchains/: tf_toolchain.bzl
tf/toolchains/terraform/: toolchain.bzl
tf/toolchains/tofu/: toolchain.bzl
