module(
    name = "gitops_example",
    version = "0.0.1",
)

bazel_dep(name = "rules_tf", version = "", repo_name = "rules_tf")
local_path_override(
    module_name = "rules_tf",
    path = "../..",
)

tf = use_extension("@rules_tf//tf:extensions.bzl", "tf_repositories")
tf.download(
    version = "1.5.7",
    mirror = {
        "local"   : ["hashicorp/local:2.4.0"],
    },
)

use_repo(tf, "tf_toolchains")
register_toolchains(
    "@tf_toolchains//:all",
)
