load("@rules_tf//tf:def.bzl", "tf_deployment", "tf_module")

tf_module(
    name = "root-mod-a",
    providers = [
        "random",
        "terraform",
    ],
    deps = [
        "//tf/modules/mod-a",
    ],
    srcs = glob(["*.tf", "*.tf.json"]),
    providers_versions = "//tf:versions",
    tflint_config = "//tf:tflint-custom-config",
)

tf_deployment(
    name = "deployment",
    module = ":root-mod-a",
)
